_assets/styles/global.scss
@import 'variables';
@import 'overrides';
@import 'wrapper';
@import 'masthead';
@import 'module';
@import 'footer';

.no-wrap {
  white-space: nowrap;
}

.clear {
  clear: both;
}

.prose {
  font-size: 16px;
  line-height: 26px;

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    color: $black;
  }
}

.prose ul {
  margin-left: 1.2em;
  list-style-type: square;
}

.prose ol {
  margin-left: 1.3em;
  list-style-type: decimal;
}

.prose .heading {
  margin-top: 24px;
  margin-bottom: 0;
}

.prose img {
  margin-top: 8px;
}

.prose .image {
  border: none;
}

.prose .bordered {
  padding: 4px;
  border: 1px solid $grey-light;
}

.prose .bordered:hover {
  border-color: $tertiary;
}

.bordered {
  display: inline-block;
  padding: 4px;
  border: 1px solid $grey-light;
}

.bordered img {
  margin: 0;
}

.lanyrd-link {
  position: relative;
  top: -4px;
  left: 0px;
  display: inline-block;
  width: 32px;
  height: 32px;
  text-indent: -900em;
  background: url(../img/lanyrd-48x48.png) no-repeat center center;
  background-size: 16px 16px;
  z-index: 1;
  margin-bottom: -8px;
  vertical-align: text-top;
}

.read-more a:before {
  content: "» ";
  float: left;
  margin-right: 4px;
}

.container {
  max-width: 1024px;
  margin: 0 auto;
  padding: 0 16px;

  &::before,
  &::after {
    content: '';
    display: table;
    width: 0;
    height: 0;
    clear: both;
  }
}

.module {
  clear: left;
}

.module-heading {
  font-size: 18px;
  color: #9d999e;
}

.heading:first-of-type {
  margin-top: 0;
}

.masthead {
  position: relative;
  margin: 12px 0;
  border-bottom: 1px solid $grey-light;
}

.masthead:after {
  content: "";
  display: block;
  clear: both;
  height: 0;
}

.masthead h1,
.masthead p,
.masthead .logo {
  display: inline-block;
  vertical-align: middle;
}

.masthead .logo-and-title {
  margin: 12px 0;
  float: left;
}

.masthead h1 {
  text-transform: none;
  font-size: 48px;
  margin-right: 4px;
  line-height: 1.2em;
}

.masthead p {
  display: block;
  font-size: 18px;
  width: auto;
  line-height: 20px;
  color: #555;
}

.masthead p em {
  font-style: normal;
  display: inline-block;
}

.social {
  display: block;
  list-style: none;
  margin: 12px 0;
  padding: 0;

  @media all and (min-width: $screen-md) {
    float: right;
  }

  &::before,
  &::after {
    // Clearfix for float
    content: '';
    display: table;
    clear: both;
  }

  li {
    display: block;
    float: left;
    margin-right: 8px;

    &:last-child {
      margin-right: 0;
    }
  }

  svg {
    display: block;
    width: $social-icon-size-large;
    height: $social-icon-size-large;
    transition: ease-in-out 0.1s all;
    fill: $grey-medium;

    &:hover {
      fill: $primary;
      transform: scale(1.2, 1.2);
    }

    @media all and (min-width: $screen-md) {
      width: $social-icon-size;
      height: $social-icon-size;
    }
  }
}

.event-detail .lanyrd-link {
  top: 1px;
  left: 5px;
  width: 32px;
  height: 32px;
  background-size: 20px 20px;
}

.event-detail .meta {
  font-size: 18px;
}

.event-detail .description::before,
.event-detail .description::after {
  content: '';
  display: table;
  clear: both;
}

.event-detail .bordered {
  margin-bottom: 8px;
}

.event-detail .vevent {
  font-size: 16px;
  line-height: 20px;
  position: relative;
  padding: 14px 0 12px 58px;
  min-height: 40px;
  border-left: 0;
  border-right: 0;
  margin: 8px 0;
}

.event-detail .vevent .date {
  margin-top: -2px;
  display: block;
}

.event-detail .vevent .adr {
  display: none;
}

.event-detail .vevent .map {
  position: absolute;
  top: 8px;
  left: 0px;
  display: block;
}

.event-detail .vevent .map img {
  max-width: 40px;
  max-height: 40px;
}

.event-detail .sponsors {
  position: absolute;
  right: 0;
  top: 7px;
  position: static;
  overflow: hidden;
  margin-left: -58px;
  margin-top: 13px;
  padding-top: 8px;
}

.event-detail .sponsor-logo {
  float: right;
  float: none;
}

.event-detail .sponsor-logo img {
  display: block;
  max-height: 52px;
  max-width: auto;
}

.event-detail .description.image .bordered {
  float: left;
  width: 40%;
  max-width: 300px;
  margin: 4px 12px 12px 0;
}

.event-item {
  margin: 16px auto;

  h3,
  p {
    margin: 4px 0;
  }
}

.event-item .lanyrd-simple {
  font-size: 13px;
  line-height: 1;
  color: #2e2e2e;
}

.news {
  margin-top: -20px;
}

.news:first-of-type {
  margin-top: 0;
}

.news:after {
  content: "";
  margin: 0;
}

.news a {
  display: block;
  padding: 8px 0;
  height: auto;
  line-height: 1;
}

.news:hover a {
  color: $black;
  border-color: $grey-medium;
}

.news strong {
  font-weight: normal;
}

.news-item .read-more {
  margin-top: -16px;
}

.dharmafly {
  text-decoration: none;
  padding: 1px;
  font-size: 11px;
}

.dharmafly:hover,
.dharmafly:focus {
  color: $green-light;
}

.dharmafly:active {
  color: $white;
  background-color: $green-light;
  border-bottom: none;
}

.extra .heading {
  margin-bottom: 8px;
  margin-top: 0;
}

.lanyrd-people {
  list-style-type: none;
  overflow: hidden;
  position: relative;
  left: -8px;
  margin-bottom: 0;
}

.lanyrd-people {
  margin-bottom: 8px;
}

.lanyrd-people li {
  float: left;
  margin-left: 8px;
}

.lanyrd-people li a {
  width: 50px;
}

.lanyrd-trackers li a {
  width: 35px;
}

.hubbub {
  margin-top: 24px;
}

.hubbub-avatar {
  width: 40px;
}

.hubbub-avatar-link {
  float: left;
  margin-top: 4px;
}

.hubbub-content {
  margin-left: 60px;
}

.hubbub-timestamp {
  float: right;
}

.hubbub-header a {
  margin-right: 5px;
}

.hubbub-comment-body p {
  margin-top: 8px;
  margin-bottom: 16px;
}

.iframe-wrapper {
  position: relative;
  padding-bottom: 65%;
  margin-bottom: 20px;
}

.iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: none;
  max-width: 100%;
}

.iframe-slides .iframe {
  width: 200%;
  height: 200%;
  max-width: 200%;
  transform: scale(0.62);
  transform-origin: 0;
}

#media-test {
  display: none;
  visibility: hidden;
  width: 0;
}

@media (min-width: $screen-xs) {
  h2 {
    font-size: 36px;
  }

  .event-detail .description.image {
    position: relative;
  }

  .event-detail .description.image .bordered {
    float: right;
    margin: 4px 0 12px 12px;
  }

  #media-test {
    width: 1px;
  }

  .event-detail .sponsors {
    position: absolute;
    right: 0;
    top: 7px;
    border-top: none;
    padding: 0;
    margin: 0;
  }

  .event-detail .sponsors .sponsor-logo {
    float: right;
  }
}

@media (min-width: $screen-md) {
  .column {
    float: left;
    box-sizing: border-box;
    width: 45%;
    margin-right: 5%;
  }

  .column:nth-child(odd) {
    clear: left;
  }

  .column:after {
    content: "";
  }
}

body,
.masthead p em {
  font-family: $font-family-body;
  font-weight: $font-weight-regular;
}

i,
em {
  font-family: $font-family-body;
}

b, strong,
.read-more a,
.event-detail .vevent,
.event-item .lanyrd-simple {
  font-family: $font-family-body;
  font-weight: $font-weight-bold;
}

h1,
h2,
h3,
h4,
h5,
h6,
.header,
.news strong {
  font-family: $font-family-header;
  font-weight: $font-weight-regular;
  text-rendering: optimizeLegibility; // May cause issues in Windows browsers
}

